; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_emit-rtl.c_emit_call_insn_after_noloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_emit-rtl.c_emit_call_insn_after_noloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @emit_call_insn_after_noloc(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @gcc_assert(i32 %6)
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @GET_CODE(i32 %8)
  switch i32 %9, label %14 [
    i32 131, label %10
    i32 130, label %10
    i32 133, label %10
    i32 132, label %10
    i32 134, label %10
    i32 129, label %10
  ]

10:                                               ; preds = %2, %2, %2, %2, %2, %2
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @emit_insn_after_1(i32 %11, i32 %12)
  store i32 %13, i32* %5, align 4
  br label %20

14:                                               ; preds = %2
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @make_call_insn_raw(i32 %15)
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @add_insn_after(i32 %17, i32 %18)
  br label %20

20:                                               ; preds = %14, %10
  %21 = load i32, i32* %5, align 4
  ret i32 %21
}

declare dso_local i32 @gcc_assert(i32) #1

declare dso_local i32 @GET_CODE(i32) #1

declare dso_local i32 @emit_insn_after_1(i32, i32) #1

declare dso_local i32 @make_call_insn_raw(i32) #1

declare dso_local i32 @add_insn_after(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
